[gd_scene load_steps=15 format=2]

[ext_resource path="res://Screenshot 2022-08-05 134946.png" type="Texture" id=1]
[ext_resource path="res://ball.gd" type="Script" id=2]
[ext_resource path="res://paddle1.gd" type="Script" id=3]
[ext_resource path="res://paddle2.gd" type="Script" id=4]
[ext_resource path="res://env.gd" type="Script" id=5]
[ext_resource path="res://PublicPixel-0W5Kv.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ping_pong_8bit_plop.ogg" type="AudioStream" id=7]
[ext_resource path="res://ping_pong_8bit_beeep.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 8.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 56 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 300.5 )

[node name="env" type="Node"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )

[node name="PlayerScore" type="Label" parent="."]
margin_left = -125.0
margin_right = 1023.0
margin_bottom = 599.0
custom_fonts/font = SubResource( 4 )
text = "Test"
align = 1
valign = 1

[node name="OppScore" type="Label" parent="."]
margin_left = 127.0
margin_right = 1027.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 5 )
text = "Score"
align = 1
valign = 1

[node name="CountdownLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -139.0
margin_bottom = -139.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "Countdown"
align = 1
valign = 1

[node name="ball" type="KinematicBody2D" parent="." groups=["ballGroup"]]
position = Vector2( 518, 300 )
scale = Vector2( 1, 1.01939 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ball"]
position = Vector2( -7.49997, -7.5 )
scale = Vector2( 0.193182, 0.0332031 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
position = Vector2( -7.5, -7.5 )
shape = SubResource( 1 )

[node name="CollisionSound" type="AudioStreamPlayer" parent="ball"]
stream = ExtResource( 8 )

[node name="paddle1" type="KinematicBody2D" parent="."]
position = Vector2( 48, 300 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="paddle1"]
position = Vector2( 1.19209e-07, -8.16584e-06 )
scale = Vector2( 0.3, 0.22 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="paddle1"]
shape = SubResource( 2 )

[node name="paddle2" type="KinematicBody2D" parent="."]
position = Vector2( 976, 300 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="paddle2"]
position = Vector2( -8.34465e-06, 6.19888e-06 )
scale = Vector2( 0.3, 0.22 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="paddle2"]
shape = SubResource( 2 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -10, 600 )
rotation = 3.14159
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -5, 300 )
shape = SubResource( 3 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 1034, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( -5, 300 )
shape = SubResource( 3 )

[node name="Countdown" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="Countdown" to="." method="_on_Countdown_timeout"]
